:wrench: SHUT UP TESTFX!
Signed-off-by: palexdev <alessandro.parisi406@gmail.com>